[package]
name = "sandbox"
version = "0.0.0"
publish = false
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
afl = "0.15.15"
arbitrary.workspace = true
solana-core = { workspace = true, features = ["rocksdb-stub"] }
solana-genesis-config.workspace = true
solana-hash.workspace = true
solana-runtime = { workspace = true, features = ["dev-context-only-utils"] }
